Added style to the submit form

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <label for="is-read">Have you read it?</label>
                 <input class="checkbox" type="checkbox" id="isRead" />
             </div>  
-        <button class="btn btn-light-green" type="submit">Submit</button>
+        <button class="btn-light-blue" type="submit">Submit</button>
     </form>
     </div>
     <div class="modal" id="accountModal"></div>
