fixed checkbox id and class

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             />
             <div class="is-read">
                 <label for="is-read">Have you read it?</label>
-                <input class="checkbox" type="checkbox" id="isRead" />
+                <input class="checkbox" type="checkbox" id="is-read" />
             </div>  
         <button class="btn-light-blue" type="submit">Submit</button>
     </form>
