--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
     <div class="header">
         <h1>Library</h1>
-        
     </div>
     <div class="btn">
         <button class="btn btn-add" id="addBookBtn">+ Add book</button>
@@ -21,7 +20,7 @@
     </div>
 
     <div class="modal" id="addBookModal">
-        <form class="add-book-form" id="addBookForm">
+        <form class="add-book-form" id="addBookForm" onsubmit="event.preventDefault();">
             <h3>Add new book</h3>
             <input
             class="input"
@@ -53,6 +52,7 @@
                 <input class="checkbox" type="checkbox" id="is-read" />
             </div>  
         <button class="btn-light-blue" type="submit">Submit</button>
+        <button class="btn-light-red" id="btn-close" type="button">Close</button>
     </form>
     </div>
     <div class="modal" id="accountModal"></div>
